feat: #1422 Add support for embedded Avro schemas Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>